--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,11 +19,11 @@
       }
     ],
     "paths": {
-      "@/components/*": ["edu_tech/src/components/*"],
-      "@/styles/*": ["edu_tech/src/app/styles/*"],
-      "@/assets/*": ["edu_tech/src/app/assets/*"]
+      "@/components/*": ["./src/components/*"],
+      "@/styles/*": ["./src/app/styles/*"],
+      "@/assets/*": ["./src/app/assets/*"]
     }
   },
-  "include": ["edu_tech/next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
